CAT-1932 Fixes thumbnail image bug